# qtor

./: .gitignore  Pipfile  README.md  config.yaml.sample  message_handler.py  payload.py  pyproject.toml  qtor.py  run_client.bat
tests/: tests.py
