[project]
name = "qtor"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jkasser", email = "jkasser@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "qbittorrent-api>=2024.3.60",
    "boto3>=1.34.101",
    "pyyaml>=6.0.1",
    "pytest>=8.2.0",
    "setuptools>=69.5.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
